# opencl_sanbox

./: README.md
sha256_cpu/: CMakeLists.txt  SHA256.h  build.sh  main.cpp  sha256.cpp  sha256_cpu.cpp  sha256_cpu.h
sha256_cpu_vs_gpu_compare_table/: CMakeLists.txt  build.sh
sha256_cpu_vs_gpu_compare_table/include/: TextTable.h
sha256_cpu_vs_gpu_compare_table/src/: main.cpp
sha256_opencl/: build.sh
sha256_opencl/3rd_parties/: utils.cpp  utils.h
sha256_opencl/include/: ocl_args.h  sha256_opencl.h
sha256_opencl/src/: main.cpp  ocl_args.cpp  sha256.cl
sha256_opencl_load_test/: CMakeLists.txt
sha256_opencl_load_test/src/: kernel_gl_gsize_analysis.py  main.cpp
